Bug 1613140 - Call QueuePerformanceNavigationTiming from Document::EndLoad() r=baku

Differential Revision: https://phabricator.services.mozilla.com/D62110